snippets/Nemerle.Statechart/Tests/testsuite/negative/invalid_local_transitions.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using System.Collections.Generic;
using System.Linq;
using System.Console;
using Nemerle.Statechart;

  /// <summary>
  /// Description of Hypothetical.
  /// </summary>
  [statechart(<#
  
  flags testing;
  
  name "invalid local transitions";
  
  state A
  {
    b (=> D; // E: Local transition target must be inside of source state or in super state of source: "TransitionAToDByb"
  }
  
  state B
  {
    state C
    {
      a (=> A; // E: Local transition target must be inside of source state or in super state of source: "TransitionCToABya"
    }
    
    state D
    {
      a => C;
    }
  }
  
  #>)]
  public class example
  {
    foo : bool {get;set;}
  }

